<resources>
    <string name="app_name">مشوار العاصمة</string>
    <string name="facebook_app_id">1213714542022009</string>
    <string name="title_activity_role">RoleActivity</string>
    <string name="title_activity_verify_phone">Verify Your Phone Number</string>
    <string name="select_your_role">Select your role</string>
    <string name="driver">Driver</string>
    <string name="passenger">Passenger</string>
    <string name="taxi_app_will_send_a_one_time_sms_message_to_verify_your_phone_number_carrier_sms_charges_may_apply">Mishwar alasimah app will send a one time SMS to verify your phone number. Carrier SMS charges may apply.</string>
    <string name="please_confirm_your_country_code_and_enter_your_phone_number">Please confirm your country code and enter your phone number</string>
    <string name="phone_number">Phone Number</string>
    <string name="ok">OK</string>
    <string name="please_enter_verification_code">Please enter verification code</string>
    <string name="next">Next</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_old_pass">Enter old password</string>
    <string name="enter_new_pass">Enter new password</string>
    <string name="enter_password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="submit">Submit</string>
    <string name="text_done">Done</string>
    <string name="or">OR</string>
    <string name="create_an_account">Create an account</string>
    <string name="forget_password">Forgot Password</string>
    <string name="please_enter_mobile_number">Please enter mobile number</string>
    <string name="please_enter_otp">Please enter OTP</string>
    <string name="otp_sent">OTP sent,Please check your inbox</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="please_enter_a_valid_email">Please enter a valid email</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="vehicleno">Vehicle Number</string>
    <string name="licence_no_registration_no">Licence Number/Reg Number</string>
    <string name="licence_expiry_date">Licence Expiry Date</string>
    <string name="attach_identity">Attach Vehicle Identity</string>
    <string name="by_submitting_this_form_i_agree_to_taxi_app_terms_contditions_i_hereby_confirm_that_the_information_provided_is_accurate_complete_up_to_date"><![CDATA[By submitting this form, I agree to Mishwar app Terms & Contditions. I hereby confirm that the information provided is accurate, complete & up-to-date.]]></string>
    <string name="sign_up">Sign Up</string>
    <string name="submit_paypal_id_text">Enter your paypal id here</string>
    <string name="add_paypal_id_text">Add paypal Account</string>
    <string name="date_hint">YYYY/MM/DD</string>
    <string name="total_earning_text">Total Earning :</string>
    <string name="text_cash">Cash </string>
    <string name="text_paypal">Paypal </string>
    <string name="text_take_photo">Take Photo </string>
    <string name="text_chose_gellery">Choose from gallery</string>
    <string name="text_add_photo">Add Photo</string>
    <string name="text_attached">Attached</string>
    <string name="text_add_paypalid">This driver did not add their paypal id please pay with another way</string>
    <string name="network_not_available">Network not available. Please check network connection.</string>
    <string name="progress_loading_title">Loading</string>
    <string name="progress_loading_msg">Please wait</string>
    <string name="progress_target_date">Please select target date.</string>
    <string name="text_home">Home</string>
    <string name="text_source_address">Source address</string>
    <string name="text_my_profile">My Profile</string>
    <string name="text_vehicle_info">Vehicle Info</string>
    <string name="text_my_booking">My Booking</string>
    <string name="text_pending_req">Pending Requests</string>
    <string name="text_forgot_pass">Forgot Password</string>
    <string name="text_call_support">Call Support</string>
    <string name="text_payment_info">Payment Info</string>
    <string name="text_setting_menu">Setting</string>
    <string name="text_bout_us">About Us</string>
    <string name="text_logout">Logout</string>
    <string name="text_notification">Notification</string>
    <string name="text_make_my_trip">Make My Trip</string>
    <string name="text_add_address">Add Address</string>
    <string name="text_pickup">Pickup Address </string>
    <string name="text_destination">Destination Address </string>
    <string name="text_trip_now">Trip Now</string>
    <string name="text_trip_later">Trip Later </string>
    <string name="text_trip_monthly">Trip Monthly </string>
    <string name="text_payment_type">Payment type </string>
    <string name="text_vehicle_type">Vehicle Type </string>
    <string name="text_confirm_booking">Confirm Booking </string>
    <string name="text_waiting_timmer">Waiting for Driver Response </string>
    <string name="text_booking_summry">Booking Summary </string>
    <string name="text_upcoming_booking">Upcoming Booking </string>
    <string name="text_your_booking_id">Your booking id </string>
    <string name="text_your_total_payment">Your total payment is  $</string>
    <string name="text_pay_cash">Pay </string>
    <string name="text_total_dist_in_km">Total distance in km </string>
    <string name="text_total_time_in_min">Total time in min </string>
    <string name="btn_send">Send</string>
    <string name="text_select_max_pass"> You can select maximum </string>
    <string name="text_select_max_pass_for_car"> passenger at a time for this car ! </string>
    <string name="text_select_pass_msg"> Select at least 1 passenger ! </string>
    <string name="text_car_rate_by_dist"> Car rate by distance </string>
    <string name="text_car_rate_by_time"> Car rate by time </string>
    <string name="text_opening_counter"> Opening counter price </string>
    <string name="text_total_esti_price"> Total estimated Price </string>
    <string name="text_esti_distance"> Estimated travel distance </string>
    <string name="text_esti_time"> Estimated time duration </string>
    <string name="text_add_passenger_count"> Add Passenger Count </string>
    <string name="text_btn_ok"> Ok </string>
    <string name="text_btn_yes"> Yes </string>
    <string name="text_btn_no"> No </string>
    <string name="text_select_another_car_type"> Select another car type </string>
    <string name="text_select_another_trip"> Create another trip </string>
    <string name="text_no_driver_found"> No driver found for this car type </string>
    <string name="text_doyou_want_create_new_trip"> Do you want to create new trip ? </string>
    <string name="text_select_payment_type"> Select payment type!</string>
    <string name="text_select_time">please select time</string>
    <string name="text_submit_req"> Submit Request </string>
    <string name="text_driver_info"> Driver Info </string>
    <string name="text_driver_name"> Name </string>
    <string name="text_driver_car_type"> Car Type </string>
    <string name="text_driver_car_facility"> Car Facility </string>
    <string name="text_driver_rating"> Rating </string>
    <string name="text_driver_review"> Enter your Review </string>
    <string name="text_req_has_rejected"> Your Request has been rejected ! please make a new ride for another driver ! </string>
    <string name="text_req_has_accepted"> Your request has been accepted </string>
    <string name="text_select_destination"> Please Select destination address </string>
    <string name="text_select_pickup"> Please Select pickup address </string>
    <string name="text_now_select__driver"> Now you can select a driver </string>
    <string name="text_already_have_tm_trip"> you have already created mothly trip,so you can not create another monthly trip </string>
    <string name="text_ride_has_started"> Your trip has been started </string>
    <string name="text_ride_has_ended"> Your trip has been ended </string>
    <string name="text_ride_has_cancel"> Your trip has been canceled </string>
    <string name="text_u_r_ontheway"> Now you are on the way </string>
    <string name="text_active"> Online </string>
    <string name="text_inactive"> Offline </string>
    <string name="text_already_create_ride"> You have already created ride for this date. </string>
    <string name="text_user_name">User Name</string>
    <string name="text_full_name">Full Name</string>
    <string name="text_user_email">User Email</string>
    <string name="text_vehicle_id_proof">Vehicle identity proof</string>
    <string name="text_btn_update">Update</string>
    <string name="text_changepass">Change password</string>
    <string name="text_add_contact">Add emergency contact</string>
    <string name="text_vehicle_feature">Vehicle Features</string>
    <string name="text_current">CURRENT</string>
    <string name="text_previous">PREVIOUS</string>
    <string name="text_upcoming">UPCOMING</string>
    <string name="text_cancelled">CANCELED</string>
    <string name="text_trip_info">Trip info</string>
    <string name="text_call">Call</string>
    <string name="text_cancel">Cancel</string>
    <string name="btn_text_ontheway">On the way</string>
    <string name="btn_text_start">Start Trip</string>
    <string name="btn_text_cancel_trip">Cancel Trip</string>
    <string name="btn_text_end_trip">End Trip</string>
    <string name="btn_no_booking_available">No booking available till now.</string>
    <string name="btn_ride_type">Ride type</string>
    <string name="btn_ride_status">Ride Status</string>
    <string name="text_ride_date_time">Date and Time </string>
    <string name="text_alert_sure">Do you want to end this ride ?</string>
    <string name="text_currently_no_ride">Currently you Have no ride</string>
    <string name="text_alert_sure_ontheway">Are you sure, you are on the way ?</string>
    <string name="text_alert_sure_start_ride">Do you want to start this ride ?</string>
    <string name="text_alert_sure_cancel_ride">Do you want to cancel this ride ?</string>
    <string name="text_alert_gps_not_on">Gps network not available !</string>
    <string name="text_btn_open_setting">Open Location setting</string>
    <string name="text_enter_reason_for_cancel">please enter the reason for cancel booking</string>
    <string name="text_no_ride_for_cancel">You Have no ride to Cancel !</string>
    <string name="text_something_went_wrong">Something went wrong, please try again!</string>
    <string name="text_can_not_cancel_ride">Now you can not cancel this ride</string>
    <string name="text_enter_pass">Please enter correct old password</string>
    <string name="text_enter_new_pass">please enter new password</string>
    <string name="text_enter_six_digit_pass">Please enter minimum 6 digit password</string>
    <string name="text_enter_confirm_pass">please enter new confirm password</string>
    <string name="text_enter_correct_old_pass">please enter correct confirm password</string>
    <string name="text_logout_msg">Logout successfull</string>
    <string name="text_canceled_reason">Your ride has been canceled due to this reason</string>
    <string name="text_can_not_start_upcoming_ride">You can not start ride before booking date </string>
    <string name="confirmbooking_text">Do you want to confirm this ride ?</string>
    <string name="text_setting">Select your local language for this app</string>
    <string name="btn_setting_eng">English</string>
    <string name="btn_setting_arabic">Arabic</string>
    <string name="confirm_password">Confirm Password</string>
</resources>