<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_16sdp"
        android:textColor="@color/colorPrimary"
        android:text="@string/text_no_driver_found"
        android:layout_margin="@dimen/_10sdp"
        android:layout_gravity="center_horizontal"
        />


    <TextView
        android:id="@+id/car_type_btn"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:text="@string/text_select_another_car_type"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:textSize="@dimen/_14sdp"
        android:gravity="center"
        android:background="@drawable/bg_ly_border"/>

    <TextView
        android:id="@+id/trip_again_btn"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:text="@string/text_select_another_trip"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:textSize="@dimen/_14sdp"
        android:gravity="center"
        android:background="@drawable/bg_ly_border"/>

    <TextView
        android:id="@+id/cancel_btn"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:text="@string/text_cancel"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:textSize="@dimen/_14sdp"
        android:gravity="center"
        android:background="@drawable/bg_ly_green_btn"/>
</LinearLayout>