<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_5sdp"
    android:layout_margin="@dimen/_5sdp"
    android:background="@drawable/bg_login_page"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvSettingText"
        android:text="@string/text_setting"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/_14sdp"
        android:layout_centerInParent="true"
        android:gravity="center"

        />

    <LinearLayout
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_below="@+id/tvSettingText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_5sdp"
        android:weightSum="2"
        >
        <Button
            android:id="@+id/btnSettingEnglish"
            android:layout_weight="1"
            android:layout_margin="@dimen/_5sdp"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:text="@string/btn_setting_eng"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/bg_ly_payriciept_btn"
            android:textAllCaps="false"
            />

        <Button
            android:id="@+id/btnSettingArabic"
            android:layout_weight="1"
            android:layout_margin="@dimen/_5sdp"
            android:background="@drawable/bg_ly_green_btn"
            android:layout_width="@dimen/_100sdp"
            android:text="@string/btn_setting_arabic"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:layout_height="wrap_content" />


    </LinearLayout>

</RelativeLayout>
