<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@drawable/bg_fl_transparent_dark"
    android:gravity="center"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:id="@+id/layout_confirm"
    android:padding="@dimen/_4sdp">

    <TextView
        android:id="@+id/tv_msg_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:padding="@dimen/_1sdp"
        android:gravity="center"
        android:textSize="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/confirmbooking_text"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/tv_msg_confirm"
        android:layout_margin="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_2sdp"
        android:layout_centerInParent="true"
        android:gravity="center"
        >

        <Button
            android:id="@+id/btn_confirm_yes"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_34sdp"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@drawable/bg_ly_btn"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/_10sdp"
            android:text="@string/text_btn_yes"/>

        <Button
            android:id="@+id/btn_confirm_no"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_34sdp"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_10sdp"
            android:background="@drawable/bg_ly_btn"
            android:text="@string/text_btn_no"/>


    </LinearLayout>



</RelativeLayout>
