<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:layout_margin="@dimen/_5sdp"
    android:padding="@dimen/_5sdp"
    android:gravity="center"
    android:background="@color/transperant">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_220sdp"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:background="@drawable/bg_ly_tripletter_border">


        <EditText
            android:id="@+id/etOldPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/bg_edittext_green"
            android:ems="15"
            android:imeOptions="actionNext"
            android:hint="@string/enter_old_pass"
            android:textColorHint="@color/colorPrimary"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/colorPrimary"
            />
        <EditText
            android:id="@+id/etNewPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_below="@+id/etOldPass"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_edittext_green"
            android:ems="15"
            android:hint="@string/enter_new_pass"
            android:imeOptions="actionDone"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_14sdp"
            android:textColorHint="@color/colorPrimary"
            android:textColor="@color/colorPrimary"
            />

        <EditText
            android:id="@+id/etConfirmNewPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_below="@+id/etNewPass"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_edittext_green"
            android:ems="15"
            android:hint="@string/confirm_password"
            android:imeOptions="actionDone"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_14sdp"
            android:textColorHint="@color/colorPrimary"
            android:textColor="@color/colorPrimary"
            />

        <Button
            android:id="@+id/btnChangePasswordSubmit"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etConfirmNewPass"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_ly_green_btn"
            android:padding="@dimen/_10sdp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/_10sdp"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/btnChangePasswordCancel"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etConfirmNewPass"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_ly_green_btn"
            android:padding="@dimen/_10sdp"
            android:text="@string/text_cancel"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/_10sdp"
            android:textAllCaps="false"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/white"/>

    </RelativeLayout>


</RelativeLayout>
