<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    >
    <fragment
        android:id="@+id/BookingMap"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        />

    <Button
        android:layout_width="@dimen/_62sdp"
        android:layout_height="@dimen/_62sdp"
        android:id="@+id/btnTripInfo"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginRight="@dimen/_12sdp"
        android:background="@drawable/bg_circle_tripinfo"
        android:text="@string/text_trip_info"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        android:textAllCaps="false"
        />

    <LinearLayout
        android:id="@+id/layout_footer1"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:weightSum="2"
        android:visibility="gone"
        >

        <Button
            android:id="@+id/btnDriverOntheWay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_text_ontheway"
            android:textAllCaps="false"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/white"
            android:visibility="gone"
            />


        <Button
            android:id="@+id/btnDriverStarttrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_text_start"
            android:textAllCaps="false"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/white"
            android:visibility="gone"
            />
        <Button
            android:id="@+id/btnDriverCanceltrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_text_cancel_trip"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:background="@color/orange"
            android:visibility="gone"

            />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_footer2"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:weightSum="2"
        android:visibility="gone"
        >
        <Button
            android:id="@+id/btnDriverEndtrip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_text_end_trip"
            android:textAllCaps="false"
            android:background="@color/red"
            android:textColor="@color/white"
            android:visibility="gone"

            />

    </LinearLayout>

  <!--  <LinearLayout
        android:id="@+id/layout_footer3"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:weightSum="2"
        android:visibility="visible"
        >
        <Button
            android:id="@+id/btnDriverOntheWay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="On the way"
            android:textAllCaps="false"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/white"
            android:visibility="visible"
            />
        <Button
            android:id="@+id/btnDriverCanceltrip1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Cancel Trip"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:background="@color/orange"
            android:visibility="visible"

            />

    </LinearLayout>
-->

</RelativeLayout>
